--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Name:<input type="letters"><br><br>
 Email:<input type="gmail"><br><br>
 DOB:<input type="date"><br><br>
 </form>
-<a href="content://com.google.android.apps.docs.storage.legacy/enc%3DIoMUtuHSYdx-x4YhlRMv0-txDPIisTNEb4Q9rEPn0LeH2Q9n-FJsVfVfQW3Rtj0CnnkGdy8TxAqD%0AsetZES1qQLwSlrT2usasLfyK5Roj3b_cuzcHy2ev2LbgkMoonXriIZHi9A%3D%3D%0A"><h1>click here to visit my main website</h1></a><br>
+<a href="https://3in1rajeshswapnilomm.github.io/Swapnil/"><h1>click here to visit my main website</h1></a><br>
 My main website only contains my 8 /10 webpage<br><br>
 <a href="https://drive.google.com/file/d/1F4aovFeTKW-IUPJSzi0VQmFo_s8e1yqE/view?usp=drivesdk">click here to go second page</a><br><br>
 <a href="https://drive.google.com/file/d/1GaHd0tuptLBJPnUhY6ExGCiLgiUwsXXU/view?usp=drivesdk">click here to go third page</a><br><br>
